--- a/README.adoc
+++ b/README.adoc
@@ -14,7 +14,9 @@ Through this project, you will:
     Apply Material Design guidelines to an mobile application.
     Separate an interface into surfaces.
     Effectively use transitions and motion.
-=Libraries
+    
+    
+= Libraries:
 
     Android Design Support,
     Android Palette Support,
